[workspace]
members  = [ "crates/*" ]
resolver = "3"

[workspace.lints]
clippy = { all = "deny" }
rust   = { unsafe_code = "forbid" }

[workspace.package]
authors    = [ "Swelio <swelio.github@outlook.com>" ]
license    = "Apache-2.0"
repository = "https://github.com/Swelio/chaoson.git"
version    = "0.1.0"

[profile.dev.build-override]
opt-level = 3

[profile.release]
codegen-units = 1
lto           = true
opt-level     = 3
strip         = true

[workspace.dependencies]
